erDiagram
    ROLES {
        UNSIGNED_INTEGER id PK
        VARCHAR name UK
        VARCHAR label
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    USERS {
        UNSIGNED_INTEGER id PK
        VARCHAR name
        VARCHAR email UK
        TIMESTAMP email_verified_at
        VARCHAR password
        UNSIGNED_INTEGER role_id FK
        VARCHAR remember_token
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
erDiagram
    ATTENDANCES {
        UNSIGNED_INTEGER id PK
        UNSIGNED_INTEGER user_id FK
        DATE date
        DATETIME clock_in_time
        DATETIME clock_out_time
        UNSIGNED_INTEGER status
        VARCHAR note
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
 erDiagram
    BREAK_TIMES {
        UNSIGNED_INTEGER id PK
        UNSIGNED_INTEGER attendance_id FK
        DATETIME break_start_time
        DATETIME break_end_time
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
  erDiagram
    STAMP_CORRECTION_REQUESTS {
        UNSIGNED_INTEGER id PK
        UNSIGNED_INTEGER attendance_id FK
        DATETIME requested_clock_in_time
        DATETIME requested_clock_out_time
        VARCHAR requested_note
        UNSIGNED_INTEGER status
        TIMESTAMP approved_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
 erDiagram
    BREAK_CORRECTIONS {
        UNSIGNED_INTEGER id PK
        UNSIGNED_INTEGER stamp_correction_request_id FK
        DATETIME requested_break_start_time
        DATETIME requested_break_end_time
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    %% リレーション定義
    ROLES ||--o{ USERS : "ROLES.id = USERS.role_id (ON DELETE RESTRICT)"
    USERS ||--o{ ATTENDANCES : "USERS.id = ATTENDANCES.user_id (ON DELETE CASCADE)"
    ATTENDANCES ||--o{ BREAK_TIMES : "ATTENDANCES.id = BREAK_TIMES.attendance_id (ON DELETE CASCADE)"
    ATTENDANCES ||--o{ STAMP_CORRECTION_REQUESTS : "ATTENDANCES.id = STAMP_CORRECTION_REQUESTS.attendance_id (ON DELETE CASCADE)"
    STAMP_CORRECTION_REQUESTS ||--o{ BREAK_CORRECTIONS : "STAMP_CORRECTION_REQUESTS.id = BREAK_CORRECTIONS.stamp_correction_request_id (ON DELETE CASCADE)"
    
    %% 注意事項
    %% - ATTENDANCESテーブル: user_idとdateの組み合わせでUNIQUE制約（1日1レコード）
    %% - STAMP_CORRECTION_REQUESTSの申請者はattendance.user_id経由で取得
    %% - 承認者はapproved_atがNULLでないことで判定（承認者IDは保存しない）
